Replace Fragment Success

--- a/app/src/main/res/layout/main_fragment_layout.xml
+++ b/app/src/main/res/layout/main_fragment_layout.xml
@@ -38,6 +38,7 @@
                 android:src="@mipmap/ic_user" />
 
             <EditText
+                android:id="@+id/edtUser"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/user"
@@ -59,10 +60,11 @@
                 android:src="@mipmap/ic_password" />
 
             <EditText
+                android:id="@+id/edtPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/password"
-                android:inputType="text"
+                android:inputType="textPassword"
                 android:textColor="@color/colorPrimaryDark"
                 android:textColorHint="@color/colorPrimaryLight" />
 
@@ -70,6 +72,8 @@
 
         <!--New Register-->
         <TextView
+            android:clickable="true"
+            android:id="@+id/txtNewRegister"
             android:textColor="@color/colorAccent"
             android:text="New Register"
             android:textSize="@dimen/h2"
@@ -81,6 +85,7 @@
 
     <!--Login Button-->
     <Button
+        android:id="@+id/btnLogin"
         android:textColor="@color/textColorPrimary"
         android:background="@color/colorPrimaryDark"
         android:text="Login"
